--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f4f4f9;
+    background-color: #6b6b94;
 }
 
 .calculator {
@@ -16,11 +16,11 @@ body {
     height: 400px;
     background-color: #1507d8;
     border-radius: 10px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 10px 20px rgba(255, 34, 34, 0.3);
 }
 
 .display {
-    background-color: #333;
+    background-color: #ff0000;
     color: #fff;
     font-size: 2.5rem;
     padding: 20px;
